# MotoGymkhanaRaceTiming

./: .cproject  .gitignore  .mxproject  .project  MotoGymkhanaRaceTimer Debug.launch  MotoGymkhanaRaceTiming.ioc  MotoGymkhanaRaceTiming.launch  README.md
CentralUnit/: CentralUnit.sln  CentralUnit.smproj
CentralUnit/CLI/: CLI.csproj  Program.cs  ReplayCommand.cs  SimulationCommand.cs  TestUnitCommand.cs
CentralUnit/CLITestWithUnits/: CLITestWithUnits.csproj  Program.cs  logConfig.xml  macddresslist.txt
CentralUnit/CommProtoTesting/: CommProtoTesting.csproj  Program.cs
CentralUnit/Communication/: AbstractCommunicatingUnit.cs  CommandData.cs  Communication.csproj  CommunicationFailureEventArgs.cs  CommunicationManager.cs  CommunicationProtocol.cs  ConnectionStateChangedEventArgs.cs  DataReceivedEventArgs.cs  DirectSerialCommunication.cs  ICommunicatingUnit.cs  ISerialCommunication.cs  XbeeNetwork.cs  XbeeSerialCommunication.cs
CentralUnit/Models/: Beacon.cs  Lap.cs  (+8 more)
Core/: AStyle.cmd
Documentation/: Component_diagram.drawio  SystemConcept.drawio
PCB/: SensorHardware.csv
RaceTimeSimulation/: RaceTimeSimulation.ino
RiderDetection/: Readme.txt
RiderDetection/Embedded/main/: CMakeLists.txt  Kconfig.projbuild  MGBTCommProto.c  MGBTCommProto.h  MGBTDevice.c  MGBTDevice.h  MGBTManager.c  MGBTManager.h  MGBTTimeMgmt.c  MGBTTimeMgmt.h  esp_ibeacon_api.c  esp_ibeacon_api.h  ibeacon_demo.c  platformconfig.h
Timer/: .cproject  .mxproject  .project  LICENSE  MotoGymkhanaRaceTiming Debug.launch  MotoGymkhanaRaceTiming.ioc  MotoGymkhanaRaceTiming.launch  README.md
(+253 files in other folders)
