idf_component_register(SRCS "esp_ibeacon_api.c"
                            "ibeacon_demo.c"
                            "MGBTManager.c"
                            "MGBTCommProto.c"
                            "MGBTDevice.c"
                            "MGBTTimeMgmt.c"
                    INCLUDE_DIRS ".")